HSEARCH-5078 Upgrade to Hibernate ORM 6.4.4.Final